Implementacion de Datos en Consultas

--- a/PorcinoRemoto.App.Frontend/Pages/Index.cshtml
+++ b/PorcinoRemoto.App.Frontend/Pages/Index.cshtml
@@ -3,19 +3,24 @@
 @{ ViewData["Title"] = "Home page"; }
 
 <div class="text-center">
-    <div class="row pe-lg-0 pt-lg-5 align-items-center rounded-3 border p-4 pb-0 shadow-lg">
+    <div class="row pe-lg-0 pt-lg-5 align-items-center rounded-3 border p-4 pb-0
+        shadow-lg">
         <div class="col-lg-7 p-lg-5 pt-lg-3 p-3">
             <h1 class="display-4 fw-bold lh-1">
                 Plataforma para el cuidado de porcinos
             </h1>
             <p class="lead">
-                Gestiona la información de porcinos, propietarios, veterinarios, e historioas clinicas incluyendo las
+                Gestiona la información de porcinos, propietarios, veterinarios,
+                e historioas clinicas incluyendo las
                 visitas. Todo en una misma plataforma.
             </p>
-            <div class="d-grid d-md-flex justify-content-md-start mb-lg-3 mb-4 gap-2">
-                <a class="text-light text-decoration-none btn btn-primary btn-lg me-md-2 fw-bold px-4" asp-area=""
+            <div class="d-grid d-md-flex justify-content-md-start mb-lg-3 mb-4
+                gap-2">
+                <a class="text-light text-decoration-none btn btn-primary btn-lg
+                    me-md-2 fw-bold px-4" asp-area=""
                     asp-page="/Custom/Forms/Registros">Registros</a>
-                <a class="btn btn-outline-secondary btn-lg px-4" asp-area="" asp-page="/Index">
+                <a class="btn btn-outline-secondary btn-lg px-4" asp-area=""
+                    asp-page="/Custom/Consultas">
                     Consultas
                 </a>
             </div>
