--- a/PorcinoRemoto.App.Frontend/Pages/Custom/Consultas.cshtml
+++ b/PorcinoRemoto.App.Frontend/Pages/Custom/Consultas.cshtml
@@ -16,7 +16,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var porcino in ConsultasModel.porcinos)
+            @foreach (var porcino in Model.porcinos)
             {
             <tr>
                 <th scope="row">@porcino.PorcinoID</th>
