--- a/PorcinoRemoto.App.Frontend/Pages/Shared/_Layout.cshtml
+++ b/PorcinoRemoto.App.Frontend/Pages/Shared/_Layout.cshtml
@@ -1,70 +1,57 @@
 ﻿<!DOCTYPE html>
 <html lang="es">
 
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>@ViewData["Title"] - PorcinoRemoto.App.Frontend</title>
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-            />
-        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"
-            />
-        <link rel="stylesheet" href="~/PorcinoRemoto.App.Frontend.styles.css"
-            asp-append-version="true" />
-    </head>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - PorcinoRemoto.App.Frontend</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/PorcinoRemoto.App.Frontend.styles.css" asp-append-version="true" />
+</head>
 
-    <body>
-        <header>
-            <nav class="navbar navbar-expand-sm navbar-toggleable-sm
+<body>
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm
                 navbar-light bg-white border-bottom box-shadow mb-3">
-                <div class="container">
-                    <a class="navbar-brand" asp-area="" asp-page="/Index">🐷
-                        Cuidado porcino remoto</a>
-                    <button class="navbar-toggler" type="button"
-                        data-bs-toggle="collapse"
-                        data-bs-target=".navbar-collapse"
-                        aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="navbar-collapse collapse d-sm-inline-flex
-                        justify-content-between">
-                        <ul class="navbar-nav flex-grow-1">
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area=""
-                                    asp-page="/Index">Principal</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area=""
-                                    asp-page="/Custom/Forms/Registros">Registros</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area=""
-                                    asp-page="/Custom/Consultas">Consultas</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </header>
-        <div class="container">
-            <main role="main" class="pb-3">
-                @RenderBody()
-            </main>
-        </div>
-
-        <footer class="border-top footer text-muted">
             <div class="container">
-                &copy; 2022 - PorcinoRemoto.App -
-                <a target="_blank"
-                    href="https://github.com/BADCoCoBunny/PorcinoRemoto.App"
-                    class="text-decoration-none">
-                    Respositorio GitHub
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16"
-                        height="16" fill="currentColor" class="bi bi-github"
-                        viewBox="0 0 16 16">
-                        <path
-                            d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47
+                <a class="navbar-brand" asp-area="" asp-page="/Index">🐷
+                    Cuidado porcino remoto</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse d-sm-inline-flex
+                        justify-content-between">
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Principal</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Custom/Forms/Registros">Registros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Custom/Consultas">Consultas</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <div class="container">
+        <main role="main" class="pb-3">
+            @RenderBody()
+        </main>
+    </div>
+
+    <footer class="border-top footer text-muted">
+        <div class="container">
+            &copy; 2022 - PorcinoRemoto.App -
+            <a target="_blank" href="https://github.com/BADCoCoBunny/PorcinoRemoto.App" class="text-decoration-none">
+                Respositorio GitHub
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github"
+                    viewBox="0 0 16 16">
+                    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47
                             7.59.4.07.55-.17.55-.38
                             0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01
                             1.08.58 1.23.82.72 1.21 1.87.87
@@ -76,17 +63,17 @@
                             3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0
                             .21.15.46.55.38A8.012 8.012 0 0 0 16
                             8c0-4.42-3.58-8-8-8z">
-                        </path>
-                    </svg>
-                </a>
-            </div>
-        </footer>
+                    </path>
+                </svg>
+            </a>
+        </div>
+    </footer>
 
-        <script src="~/lib/jquery/dist/jquery.min.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
 
-        @await RenderSectionAsync("Scripts", required: false)
-    </body>
+    @await RenderSectionAsync("Scripts", required: false)
+</body>
 
 </html>
