¡Importante! Nueva migración creada. Bug por solucionar: Muchas de las relaciones en la base de datos son Uno a Uno. Esto es un problema ya que, por ejemplo, una persona solo puede ser propietaria de un porcino, un porcino solo puede tener una visita, un veterinario solo puede hacer una visita y una historia clínica solo puede tener una visita. Este problema viene de modelo autogenerado con EF. Actualizaciones: 1. Ha cambiado el proyecto PorcinoRemoto.App.Consola. Los cambios están relacionados con las pruebas de la base de datos, nada transendente. 2. Ha cambiado el proyecto PorcinoRemoto.App.Dominio. En un intento de solucionar los bugs con el modelo de la base de datos se intenta implementar un listamiento de las entidades debiles de la relación. También se asignan algunos valores como posibles nulls para evitar la relación Uno a Uno. 3. Ha cambiado el proyecto PorcinoRemoto.App.Frontend. Implementadas las funcionalidades de los formularios, el listamiento de porcinos desde la base de datos y la búsqueda individual de un porcino. 4. Ha cambiado el proyecto PorcinoRemoto.App.Persistencia. Cambios correspondientes a los realizados en la capa de Dominio para correlacionar su funcionamiento.

--- a/PorcinoRemoto.App.Frontend/Pages/Custom/Consultas.cshtml
+++ b/PorcinoRemoto.App.Frontend/Pages/Custom/Consultas.cshtml
@@ -41,12 +41,13 @@
                 {
                 <tr>
                     <th scope="row">@porcino.PorcinoID</th>
-                    <td class="text-nowrap">@porcino.Nombre</td>
+                    <td class="text-nowrap"><a asp-page="/Custom/Detalles/DetallePorcino" asp-route-idPorcino="@porcino.PorcinoID">@porcino.Nombre</a></td>
                     <td class="text-nowrap">@porcino.Color</td>
                     <td class="text-nowrap">@porcino.Especie</td>
                     <td class="text-nowrap">@porcino.Raza</td>
-                    <td class="text-nowrap">@porcino.Propietario</td>
-                    <td class="text-nowrap">@porcino.HistoriaClinica</td>
+                    <td class="text-nowrap"><a href="">@porcino.Propietario.Persona.PrimerNombre
+                            @porcino.Propietario.Persona.PrimerApellido</a></td>
+                    <td class="text-nowrap"><a href="">@porcino.HistoriaClinica.HistoriaID</a></td>
                 </tr>
                 }
                 } else {
